# mathematics-of-computer-graphics

./: CMakeLists.txt  Wyniki operacji.odt
include/: IntersectionSolver.h  Matrix4x4.h  Quaterion.h  Vector3f.h  Vector4f.h
src/: IntersectionSolver.cpp  Matrix4x4.cpp  Quaterion.cpp  Vector3f.cpp  Vector4f.cpp  main.cpp
